@@ -1,5 +1,9 @@
 2004-11-15  Pascal Scheffers  <pascal@scheffers.net>
 
+	* tkchat.tcl: Fixed ijchain /me actions.
+
+2004-11-15  Pascal Scheffers  <pascal@scheffers.net>
+
 	* tkchat.tcl: Fixed up ijchain messages in jabber history loading.
 
 2004-11-12  Pascal Scheffers  <pascal@scheffers.net>
